[package]
name = "rcom"
version = "0.2.0"
authors = ["Vadzim Dambrouski <vadzim.dambrouski@promwad.com>"]
description = "A communication program for accessing serial ports"
repository = "https://github.com/pftbest/rcom"
readme = "README.md"
keywords = ["serial", "minicom"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
clap = "2.33.0"
mio = "0.6.21"
serial = "0.4.0"
termios = "0.3.1"
time = "0.1.42"
